--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -27,7 +27,7 @@
             <li><a href="pages/cources.html">КУРСЫ</a></li>
             <li><a href="#">О НАС</a></li>
             <li><a href="#">НОВОСТИ</a></li>
-            <li><a href="#">КОНТАКТЫ</a></li>
+            <li><a href="pages/contacts.html">КОНТАКТЫ</a></li>
         </ul>
     </nav>
     <main>
