--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -27,7 +27,7 @@
             <li><a href="cources.html">КУРСЫ</a></li>
             <li><a href="#">О НАС</a></li>
             <li><a href="#">НОВОСТИ</a></li>
-            <li><a href="#">КОНТАКТЫ</a></li>
+            <li><a href="contacts.html">КОНТАКТЫ</a></li>
         </ul>
     </nav>
     <main>
