--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -25,8 +25,8 @@
         <ul>
             <li><a href="../index.html">ГЛАВНАЯ</a></li>
             <li><a href="cources.html">КУРСЫ</a></li>
-            <li><a href="#">О НАС</a></li>
-            <li><a href="#">НОВОСТИ</a></li>
+            <li><a href="about.html">О НАС</a></li>
+            <li><a href="news.html">НОВОСТИ</a></li>
             <li><a href="contacts.html">КОНТАКТЫ</a></li>
         </ul>
     </nav>
