--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -26,7 +26,7 @@
             <li><a href="index.html">ГЛАВНАЯ</a></li>
             <li><a href="pages/cources.html">КУРСЫ</a></li>
             <li><a href="pages/about.html">О НАС</a></li>
-            <li><a href="#">НОВОСТИ</a></li>
+            <li><a href="pages/news.html">НОВОСТИ</a></li>
             <li><a href="pages/contacts.html">КОНТАКТЫ</a></li>
         </ul>
     </nav>
