change of adress and phones

--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -17,8 +17,8 @@
             </div>
         </div>
         <div class="contact-info">
-            <p>Россия, г. Москва, ул. Тверская, дом 1</p>
-            <p>+1(23)-45-67-890</p>
+            <p>Беларусь, г. Минск, ул. Платонова, 39</p>
+            <p>+375 (29) 941-47-24</p>
         </div>
     </div>
     <nav>
