add terms and privacy pages, footer

--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -81,6 +81,17 @@
             <p>Портрет «начинающего студента» у меня нарисовался после работы с десятками тысяч писем и вопросов от студентов и пользователей сайта, поэтому взялась его «рисовать» я со знанием дела. Итак, начинающий классический!</p>       </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-legal">
+            <ul>
+                <li><a href="terms.html">Пользовательское соглашение</a></li>
+                <li><a href="privacy.html">Политика конфиденциальности</a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 Школа норвежского языка. Все права защищены.</p>
+        </div>
+    </footer>
 </body>
 </html>
 
