--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -80,5 +80,16 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-legal">
+            <ul>
+                <li><a href="pages/terms.html">Пользовательское соглашение</a></li>
+                <li><a href="pages/privacy.html">Политика конфиденциальности</a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 Школа норвежского языка. Все права защищены.</p>
+        </div>
+    </footer>
 </body>
 </html>
