--- a/1 lab/pages/contacts.html
+++ b/1 lab/pages/contacts.html
@@ -40,8 +40,8 @@
         <div class="main-content number-label">
             <h1>+375 (29) 941-47-24</h1>
             <p class="subheadline">ЗВОНИТЕ В УДОБНОЕ ДЛЯ ВАС ВРЕМЯ</p>
-  </div>
+        </div>
 
   <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A025cecb53d89e90ad65e20c2795bd87f065ff5fee4ba9889404133feb0599b5c&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script></body>
-
+    </main>
   </html>
