--- a/1 lab/pages/contacts.html
+++ b/1 lab/pages/contacts.html
@@ -42,7 +42,17 @@
             <p class="subheadline">ЗВОНИТЕ В УДОБНОЕ ДЛЯ ВАС ВРЕМЯ</p>
         </div>
 
-
-  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A025cecb53d89e90ad65e20c2795bd87f065ff5fee4ba9889404133feb0599b5c&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script></body>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A025cecb53d89e90ad65e20c2795bd87f065ff5fee4ba9889404133feb0599b5c&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script></body>
     </main>
+    <footer>
+        <div class="footer-legal">
+            <ul>
+                <li><a href="terms.html">Пользовательское соглашение</a></li>
+                <li><a href="privacy.html">Политика конфиденциальности</a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 Школа норвежского языка. Все права защищены.</p>
+        </div>
+    </footer>
   </html>
