--- a/1 lab/pages/news.html
+++ b/1 lab/pages/news.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo-link">
-            <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
-            <div>
-        <h1 class="heading">NORSK</h1>
-        <p class="subheading">школа норвежского языка
+        <a href="../index.html">
+            <div class="header-logo-link">
+                <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
+                <div>
+                    <h1 class="heading">NORSK</h1>
+                    <p class="subheading">школа норвежского языка
+                </div>
             </div>
-        </div>
+        </a>
         <div class="contact-info">
             <p>Беларусь, г. Минск, ул. Платонова, 39</p>
             <p>+375 (29) 941-47-24</p>
@@ -40,9 +42,9 @@
             <h1 class="news-header">Хотите свободно говорить по-норвежски?</h1>
             <div>
                 <img src="../assets/images/news1.png" alt="Изучение норвежского языка" class="image">
-                <div class="news-text">
+                <p class="news-text">
                 Пройдите наш курс из 7 уроков и вы сможете освоить любой язык! Мы рационально используем КАЖДУЮ МИНУТУ вашего времени, обучая вас общению на иностранном языке.
-                </div>
+                </p>
             </div>
             <a href="#" class="news-button">ЧИТАТЬ ДАЛЬШЕ</a>
         </div>
@@ -51,11 +53,9 @@
             <h1 class="news-header">У нас открылись курсы норвежского языка!</h1>
             <div>
                 <img src="../assets/images/news1.png" alt="Изучение норвежского языка" class="image">
-                <div class="news-text">
-                    Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке.
-                    Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку.
-                    Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                </div>
-            </div>
+                <p class="news-text">
+                    Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                </div>
+                </p>
             <a href="#" class="news-button">ЧИТАТЬ ДАЛЬШЕ</a>
         </div>
     </main>
