--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo-link">
-            <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
-            <div>
-        <h1 class="heading">NORSK</h1>
-        <p class="subheading">школа норвежского языка
+        <a href="../index.html">
+            <div class="header-logo-link">
+                <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
+                <div>
+                    <h1 class="heading">NORSK</h1>
+                    <p class="subheading">школа норвежского языка
+                </div>
             </div>
-        </div>
+        </a>
         <div class="contact-info">
             <p>Беларусь, г. Минск, ул. Платонова, 39</p>
             <p>+375 (29) 941-47-24</p>
