--- a/1 lab/pages/privacy.html
+++ b/1 lab/pages/privacy.html
@@ -9,16 +9,18 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo-link">
-            <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
-            <div>
-        <h1 class="heading">NORSK</h1>
-        <p class="subheading">школа норвежского языка
+        <a href="../index.html">
+            <div class="header-logo-link">
+                <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
+                <div>
+                    <h1 class="heading">NORSK</h1>
+                    <p class="subheading">школа норвежского языка
+                </div>
             </div>
-        </div>
+        </a>
         <div class="contact-info">
-            <p>Россия, г. Москва, ул. Тверская, дом 1</p>
-            <p>+1(23)-45-67-890</p>
+            <p>Беларусь, г. Минск, ул. Платонова, 39</p>
+            <p>+375 (29) 941-47-24</p>
         </div>
     </div>
     <nav>
@@ -30,10 +32,11 @@
             <li><a href="contacts.html">КОНТАКТЫ</a></li>
         </ul>
     </nav>
+    <div class="rectangle"></div>
     <main>
         <div class="container">
             <div class="info">
-                <h2>ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</h2>
+                <h1>ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</h1>
                 <p>Настоящая Политика конфиденциальности является составной частью Пользовательского соглашения Сайта и действует в отношении всей информации, в том числе персональных данных Пользователя, получаемых Администрацией Сайта в процессе работы Пользователя с Сайтом, исполнения Пользовательского соглашения и соглашений между Администрацией сайта и Пользователем. Использование Сайта означает безоговорочное согласие Пользователя с настоящей Политикой конфиденциальности и указанными в ней условиями обработки его персональных данных; в случае несогласия с этими условиями Пользователь должен воздержаться от использования Сайта.</p>
                 <p>Перед использованием Сайта Пользователю необходимо внимательно изучить настоящую Политику конфиденциальности.</p>
                 <h3><i>Персональные данные</i></h3> 
