adapt courses and contacts

--- a/1 lab/pages/news.html
+++ b/1 lab/pages/news.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/news.css">
 </head>
 <body>
-    <div class="header">
+    <header>
         <a href="../index.html">
             <div class="header-logo-link">
                 <img src="../assets/images/norsk-logo.png" alt="NORSK Logo">
@@ -22,6 +22,21 @@
             <p>Беларусь, г. Минск, ул. Платонова, 39</p>
             <p>+375 (29) 941-47-24</p>
         </div>
+    </header>
+
+    <div class="topnav">
+        <a href="#home" class="active">Меню</a>
+
+        <div id="myLinks">
+            <a href="../index.html">ГЛАВНАЯ</a>
+            <a href="cources.html">КУРСЫ</a>
+            <a href="about.html">О НАС</a>
+            <a href="news.html">НОВОСТИ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <img class="fa fa-bars" src="../assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">        
+        </a>
     </div>
     <nav>
         <ul>
@@ -54,8 +69,11 @@
             <div>
                 <img src="../assets/images/news1.png" alt="Изучение норвежского языка" class="image">
                 <p class="news-text">
-                    Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                </div>
+                    Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                
+                    Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык!                
                 </p>
+            </div>
+
             <a href="#" class="news-button">ЧИТАТЬ ДАЛЬШЕ</a>
         </div>
     </main>
