--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -7,7 +7,6 @@
     <title>NORSK - Школа норвежского языка</title>
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/courses.css">
-
     <script>
         function myFunction() {
             var x = document.getElementById("myLinks");
@@ -38,7 +37,7 @@
     </header>
 
     <div class="topnav">
-        <a href="#home" class="active">Logo</a>
+        <a href="#home" class="active">Меню</a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
             <a href="../index.html">ГЛАВНАЯ</a>
