index, privacy, terms

--- a/1 lab/pages/privacy.html
+++ b/1 lab/pages/privacy.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <div class="topnav">
-        <a href="#home" class="active">Logo</a>
+        <a href="#home" class="active">Меню</a>
         <div id="myLinks">
             <a href="../index.html">ГЛАВНАЯ</a>
             <a href="cources.html">КУРСЫ</a>
