--- a/1 lab/pages/news.html
+++ b/1 lab/pages/news.html
@@ -6,6 +6,17 @@
     <title>NORSK - Школа норвежского языка</title>
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/news.css">
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
