--- a/1 lab/pages/about.html
+++ b/1 lab/pages/about.html
@@ -66,19 +66,17 @@
         </div>
         <div class="container">
             <div class="info">
+                <h2>Немного истории</h2>
+                    <p>2018 год — Открыты первые группы по изучению финского, шведского, норвежского языков в Скандинавской школе.</p>
+                    <p>2019 год — разработано новое направление Скандинавской школы – программа изучения английского языка в Англии.</p>
+                    <p>2020 год — запущен новый проект «Ознакомительная поездка по ВУЗам Финляндии».</p>
+            </div>
+            <div class="info">
                 <h2>О школе</h2>
                 <p>Проект получил первичное финансирование благодаря гранту действующего на тот момент Совета Министров Северных стран, в чьи функции входили, в частности, поддержка, развитие и распространение северных языков и культуры.</p>
                 <p>Скандинавская Школа была открыта в 2018 году. Мы установили контакты с десятками колледжей в Финляндии и Швеции.</p>
                 <p>Была разработана и реализована программа «Отдых + обучение» для школьников в период каникул.</p>
                 <p>Несколькими годами позже наши теплые деловые отношения с образовательными организациями Испании позволили организовать новую международную программу «Из северной Европы в Южную», а еще через несколько лет стартовали программы в Англии и на Мальте.</p>
-            </div>
-            <div class="info">
-                <h2>Немного истории</h2>
-                <ul>
-                    <li>2018 год — Открыты первые группы по изучению финского, шведского, норвежского языков в Скандинавской школе.</li>
-                    <li>2019 год — разработано новое направление Скандинавской школы – программа изучения английского языка в Англии.</li>
-                    <li>2020 год — запущен новый проект «Ознакомительная поездка по ВУЗам Финляндии».</li>
-                </ul>
             </div>
         </div>
         <div class="team">
