--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -46,7 +46,7 @@
             <a href="pages/news.html">НОВОСТИ</a>
             <a href="pages/contacts.html">КОНТАКТЫ</a>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a class="icon" onclick="myFunction()">
             <img class="fa fa-bars" src="assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">        
         </a>
     </div>
