add icon robots

--- a/1 lab/pages/about.html
+++ b/1 lab/pages/about.html
@@ -48,6 +48,7 @@
         <a class="icon" onclick="myFunction()">
             <img class="fa fa-bars" src="../assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">        
         </a>
+        <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
     </div>
 
     <nav>
