--- a/1 lab/pages/contacts.html
+++ b/1 lab/pages/contacts.html
@@ -17,6 +17,7 @@
             }
         }
     </script>
+    <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
             <a href="contacts.html">КОНТАКТЫ</a>
         </div>
         <a class="icon" onclick="myFunction()">
-            <img class="fa fa-bars" src="../assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">        
+            <img class="fa fa-bars" src="../assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">
         </a>
     </div>
     <nav>
@@ -84,4 +85,4 @@
         </div>
     </footer>
 </body>
-  </html>
+</html>
