--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -9,15 +9,15 @@
 
     <script>
         function myFunction() {
-  var x = document.getElementById("myLinks");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
     </script>
-
+    <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    
+
     <div class="topnav">
         <a href="#home" class="active">Меню</a>
         <div id="myLinks">
@@ -47,7 +47,7 @@
             <a href="pages/contacts.html">КОНТАКТЫ</a>
         </div>
         <a class="icon" onclick="myFunction()">
-            <img class="fa fa-bars" src="assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">        
+            <img class="fa fa-bars" src="assets/images/burger.svg" alt="burger_menu" style="width: fit-content;">
         </a>
     </div>
 
