--- a/1 lab/pages/terms.html
+++ b/1 lab/pages/terms.html
@@ -18,6 +18,7 @@
             }
         }
     </script>
+    <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 
 <body>
