--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -17,7 +17,7 @@
             }
         }
     </script>
-    <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 
 <body>
