--- a/1 lab/pages/privacy.html
+++ b/1 lab/pages/privacy.html
@@ -16,7 +16,7 @@
             }
         }
     </script>
-    <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
