--- a/1 lab/pages/cources.html
+++ b/1 lab/pages/cources.html
@@ -62,9 +62,21 @@
         </ul>
     </nav>
     <main>
+        <dialog id="dialog_sign">
+            <div style="display: flex; flex-direction: column;">
+                <h2>Записаться на курс</h2>    
+                <label for="name">Имя:*</label>
+                <input type="text" name="name" placeholder="Иван Иванов" id="name" required>
+                <label for="email">E-mail:*</label>
+                <input type="email" name="mail" placeholder="ivanov@gmail.com" id="email" required>
+                <button type="submit">Отправить</button>
+                <p>* — Обязательные поля</p>
+            </div>
+        </dialog>
+
         <div class="main-content intensive">
             <h1>ЛЕТНИЕ ИНТЕНСИВНЫЕ КУРСЫ</h1>
-            <a href="#" class="signup-button">ЗАПИСАТЬСЯ</a>
+            <a onclick="window.dialog_sign.showModal()" class="signup-button">ЗАПИСАТЬСЯ</a>
         </div>
         <div class="container">
             <div class="content">
@@ -82,7 +94,7 @@
                     <li>Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с
                         запятой, но текст не дал сбить себя с толку</li>
                 </ul>
-                <a href="#" class="button">ЗАПИСАТЬСЯ НА ИНТЕНСИВ</a>
+                <a onclick="window.dialog_sign.showModal()" class="button">ЗАПИСАТЬСЯ НА ИНТЕНСИВ</a>
             </div>
             <div class="sidebar">
                 <img src="../assets/images/course-teacher.png" alt="Инголфр и Сигритр" style="width:100%;">
@@ -95,7 +107,7 @@
         </div>
         <div class="main-content group">
             <h1>ЛЕТНИЕ ИНТЕНСИВНЫЕ КУРСЫ</h1>
-            <a href="#" class="signup-button">ЗАПИСАТЬСЯ</a>
+            <a onclick="window.dialog_sign.showModal()" class="signup-button">ЗАПИСАТЬСЯ</a>
         </div>
         <div class="container">
             <div class="content">
@@ -114,7 +126,7 @@
                     <li>На берегу семантика большого языкового океана</li>
                     <li>Семантика большого языкового океана</li>
                 </ul>
-                <a href="#" class="button">ЗАПИСАТЬСЯ НА ИНТЕНСИВ</a>
+                <a class="button" onclick="window.dialog_sign.showModal()">ЗАПИСАТЬСЯ НА ИНТЕНСИВ</a>
             </div>
             <div class="sidebar">
                 <img src="../assets/images/group-teacher.png" alt="Грай Астрид" style="width:100%;">
