last changes, buttons, links, icons

--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -63,7 +63,7 @@
     <main>
         <div class="main-content intensive">
             <h1>ОНЛАЙН-КУРСЫ НОРВЕЖСКОГО ЯЗЫКА</h1>
-            <a href="#" class="signup-button">НАШИ КУРСЫ</a>
+            <a href="pages/cources.html" class="signup-button">НАШИ КУРСЫ</a>
         </div>
         <div class="study">
             <h2 class="study-title">ФОРМЫ ОБУЧЕНИЯ</h2>
@@ -73,21 +73,21 @@
                     <h3>Летние интенсивные курсы</h3>
                     <p>Краткосрочный (2-3 месяца) курс норвежского языка, который проводится несколько раз в год для тех, кто нуждается в быстром и эффективном получении элементарных навыков общения.</p>
                     <p class="price">200.00 руб.</p>
-                    <a href="#" class="more-info-btn">ПОДРОБНЕЕ</a>
+                    <a href="pages/cources.html#intensive" class="more-info-btn">ПОДРОБНЕЕ</a>
                 </div>
                 <div class="study-form">
                     <img src="assets/images/study-form2.jpg" alt="Team Member 2">
                     <h3>Индивидуальное обучение</h3>
                     <p>В случае если у Вас сложное расписание, посменный график работы, или просто желание заниматься один на один с преподавателем, мы можем предложить Вам индивидуальную форму обучения.</p>
                     <p class="price">300.00 руб.</p>
-                    <a href="#" class="more-info-btn">ПОДРОБНЕЕ</a>
+                    <a style="pointer-events: none; cursor: default; background-color: grey;" class="more-info-btn">НЕДОСТУПНО</a>
                 </div>
                 <div class="study-form">
                     <img src="assets/images/study-form3.jpg" alt="Team Member 3">
                     <h3>Обучение в группах по графику</h3>
                     <p>Самая доступная и популярная форма обучения в Школе. При обучении в группах используется фиксированное расписание занятий.</p>
                     <p class="price">150.00 руб.</p>
-                    <a href="#" class="more-info-btn">ПОДРОБНЕЕ</a>
+                    <a href="pages/cources.html#group" class="more-info-btn">ПОДРОБНЕЕ</a>
                 </div>
             </div>
         </div>
