--- a/1 lab/index.html
+++ b/1 lab/index.html
@@ -6,17 +6,7 @@
     <title>Школа Норвежского Языка NORSK</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/index.css">
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-    </script>
+    <script src="scripts/base.js"></script>
     <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 <body>
@@ -68,22 +58,22 @@
         <div class="study">
             <h2 class="study-title">ФОРМЫ ОБУЧЕНИЯ</h2>
             <div class="study-forms">
-                <div class="study-form">
-                    <img src="assets/images/study-form1.jpg" alt="Team Member 1">
+                <div class="study-form" >
+                    <img class="zoomable" src="assets/images/study-form1.jpg" alt="Team Member 1">
                     <h3>Летние интенсивные курсы</h3>
                     <p>Краткосрочный (2-3 месяца) курс норвежского языка, который проводится несколько раз в год для тех, кто нуждается в быстром и эффективном получении элементарных навыков общения.</p>
                     <p class="price">200.00 руб.</p>
                     <a href="pages/cources.html#intensive" class="more-info-btn">ПОДРОБНЕЕ</a>
                 </div>
                 <div class="study-form">
-                    <img src="assets/images/study-form2.jpg" alt="Team Member 2">
+                    <img class="zoomable" src="assets/images/study-form2.jpg" alt="Team Member 2">
                     <h3>Индивидуальное обучение</h3>
                     <p>В случае если у Вас сложное расписание, посменный график работы, или просто желание заниматься один на один с преподавателем, мы можем предложить Вам индивидуальную форму обучения.</p>
                     <p class="price">300.00 руб.</p>
                     <a style="pointer-events: none; cursor: default; background-color: grey;" class="more-info-btn">НЕДОСТУПНО</a>
                 </div>
                 <div class="study-form">
-                    <img src="assets/images/study-form3.jpg" alt="Team Member 3">
+                    <img class="zoomable" src="assets/images/study-form3.jpg" alt="Team Member 3">
                     <h3>Обучение в группах по графику</h3>
                     <p>Самая доступная и популярная форма обучения в Школе. При обучении в группах используется фиксированное расписание занятий.</p>
                     <p class="price">150.00 руб.</p>
@@ -96,15 +86,15 @@
             <h2 class="projects-title">НАШИ ПРОЕКТЫ</h2>
             <div class="projects">
                 <div class="project">
-                    <img src="assets/images/project1.webp" alt="Project 1">
+                    <img class="zoomable" src="assets/images/project1.webp" alt="Project 1">
                     <h3>Скандинавская книга</h3>
                 </div>
                 <div class="project">
-                    <img src="assets/images/project2.webp" alt="Project 2">
+                    <img class="zoomable" src="assets/images/project2.webp" alt="Project 2">
                     <h3>Nordic Blog</h3>
                 </div>
                 <div class="project">
-                    <img src="assets/images/project3.webp" alt="Project 3">
+                    <img class="zoomable" src="assets/images/project3.webp" alt="Project 3">
                     <h3>Большая книга Скандинавской мифологии. Обучение</h3>
                 </div>
             </div>
