--- a/1 lab/pages/news.html
+++ b/1 lab/pages/news.html
@@ -6,17 +6,7 @@
     <title>NORSK - Школа норвежского языка</title>
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/news.css">
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-    </script>
+    <script src="../scripts/base.js"></script>
     <link rel="icon" href="assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 <body>
@@ -68,7 +58,7 @@
         <div class="container">
             <h1 class="news-header">Хотите свободно говорить по-норвежски?</h1>
             <div>
-                <img src="../assets/images/news1.png" alt="Изучение норвежского языка" class="image">
+                <img src="../assets/images/news1.png" alt="Изучение норвежского языка" class="image zoomable">
                 <p class="news-text">
                 Пройдите наш курс из 7 уроков и вы сможете освоить любой язык! Мы рационально используем КАЖДУЮ МИНУТУ вашего времени, обучая вас общению на иностранном языке.
                 </p>
@@ -78,7 +68,7 @@
         <div class="container">
             <h1 class="news-header">У нас открылись курсы норвежского языка!</h1>
             <div>
-                <img src="../assets/images/news2.png" alt="Изучение норвежского языка" class="image">
+                <img src="../assets/images/news2.png" alt="Изучение норвежского языка" class="image zoomable">
                 <p class="news-text">
                     Мы занимаемся онлайн обучением иностранным языкам для начинающих. С помощью нашей системы вы достигнете своих Целей, для которых нужно уметь общаться на иностранном языке. Мы рационально используем КАЖДУЮ МИНУТУ вашего времени. Все европейские языки работают по абсолютно одинаковой схеме, которую мы увидели и первыми разработали в виде 7 уроков по каждому языку. Пройдите любой курс из 7 уроков и вы сможете освоить любой язык в самые короткие из возможных сроков!                
                 </p>
