--- a/1 lab/pages/contacts.html
+++ b/1 lab/pages/contacts.html
@@ -6,17 +6,7 @@
     <title>NORSK - Школа норвежского языка</title>
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/contacts.css">
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-    </script>
+    <script src="../scripts/base.js"></script>
     <link rel="icon" href="../assets/images/norsk-logo.png" type="image/x-icon">
 </head>
 <body>
