--- a/1 lab/pages/about.html
+++ b/1 lab/pages/about.html
@@ -69,26 +69,29 @@
                 <p>Несколькими годами позже наши теплые деловые отношения с образовательными организациями Испании позволили организовать новую международную программу «Из северной Европы в Южную», а еще через несколько лет стартовали программы в Англии и на Мальте.</p>
             </div>
         </div>
-        <div class="team">
+        <div class="team"> 
             <h2 class="team-title">НАША КОМАНДА</h2>
-            <div class="team-members">
-                <div class="team-member">
-                    <img src="../assets/images/tm1.jpg" alt="Team Member 1">
-                    <h3>АЛЬВИС БОЛЬДР</h3>
-                    <p>Профессор лингвистики</p>
+            <div class="team-member">
+                <div class="carousel-container">
+                    <div class="carousel-slides">
+                        <div class="carousel-slide">
+                            <img src="../assets/images/tm1.jpg" alt="Team Member 1">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="../assets/images/tm2.jpg" alt="Team Member 2">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="../assets/images/tm3.jpg" alt="Team Member 3">
+                        </div>
+                    </div>
+                    <button class="prev">&#10094;</button>
+                    <button class="next">&#10095;</button>
                 </div>
-                <div class="team-member">
-                    <img src="../assets/images/tm2.jpg" alt="Team Member 2">
-                    <h3>КРИСАЙН ИНГ</h3>
-                    <p>Профессор лингвистики, преподаватель</p>
-                </div>
-                <div class="team-member">
-                    <img src="../assets/images/tm3.jpg" alt="Team Member 3">
-                    <h3>ИНГОЛЬФ КОЛИ</h3>
-                    <p>Доцент, преподаватель</p>
-                </div>
+                <h3>АЛЬВИС БОЛЬДР</h3>
+                <p>Профессор лингвистики</p>
             </div>
         </div>
+        
     </main>
     <footer>
         <div class="footer-legal">
