--- a/1 lab/pages/about.html
+++ b/1 lab/pages/about.html
@@ -76,19 +76,24 @@
                     <div class="carousel-slides">
                         <div class="carousel-slide">
                             <img src="../assets/images/tm1.jpg" alt="Team Member 1">
+                            <h3>КРИСАЙН ИНГ</h3>
+                            <p>Профессор лингвистики, преподаватель</p>
                         </div>
                         <div class="carousel-slide">
                             <img src="../assets/images/tm2.jpg" alt="Team Member 2">
+                            <h3>АЛЬВИС БОЛЬДР</h3>
+                            <p>Профессор лингвистики</p>
                         </div>
                         <div class="carousel-slide">
                             <img src="../assets/images/tm3.jpg" alt="Team Member 3">
+                            <h3>ИНГОЛЬФ КОЛИ</h3>
+                            <p>Доцент, преподаватель</p>
                         </div>
                     </div>
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
-                <h3>АЛЬВИС БОЛЬДР</h3>
-                <p>Профессор лингвистики</p>
+                
             </div>
         </div>
         
